docs/tests/nameres/custom_types/valid/Interface.src
// Valid

interface Printable {
    fn void print(string msg);  
}