docs/tests/nameres/custom_types/invalid/InterfaceDef.src
// Invalid

interface Printable {
    fn void print () {
        
    }
}